--- a/Front-End/lammah/src/css/nav-bar.css
+++ b/Front-End/lammah/src/css/nav-bar.css
@@ -1,15 +1,15 @@
 /* Select NavBar Page */
 .NavBar{
-    margin-top: 10px;
     position: static;
     width: 100%;
     height: 50px;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     font-weight: bold;
     font-size: 1em;
     color: black;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.144);
 }
 
 
