--- a/Front-End/lammah/src/style/admin.css
+++ b/Front-End/lammah/src/style/admin.css
@@ -35,3 +35,9 @@
     text-align: end;
     cursor: pointer
 }
+.admin-confirm-btn{
+    color : green;
+    margin-top: 10px;
+    text-align: end;
+    cursor: pointer
+}
