--- a/Front-End/lammah/src/style/OneFacility.css
+++ b/Front-End/lammah/src/style/OneFacility.css
@@ -8,11 +8,35 @@
 }
 
 .OneFacility .smallIMG{
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    border: 2px solid rgba(128, 128, 128, 0.37);
+    margin: 1%;
+    padding: 2px;
+    
 } 
 
 .OneFacility .mainIMG{
     width: 350px;
     height: 300px;
+    margin-left: 0;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
+
+.OneFacility button{
+    background-color: black;
+    color: white;
+    border: none;
+    width: 50%;
+    max-width: 100px;
+    border-radius: 10%;
+
+}
+
+
+
+@media only screen and (max-width: 500px) {
+    .OneFacility .mainIMG{
+        max-width: 250px;
+    }
+} 
