--- a/Front-End/lammah/src/style/facilities.css
+++ b/Front-End/lammah/src/style/facilities.css
@@ -15,13 +15,14 @@
     box-sizing: border-box;
     margin: 0 20px 40px 20px;
     flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     width: 330px;
     height: 350px;
 }
 
 .Facilities .facility-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.623);
 }
 
 .Facilities img{
