--- a/Front-End/lammah/src/css/home.css
+++ b/Front-End/lammah/src/css/home.css
@@ -1,7 +1,7 @@
 /* Apply Style For The whole App*/
 body{
     font-family: Arial, Helvetica, sans-serif;
-    
+    height: 100vh;
 
 }
 /* ========================= */
@@ -98,7 +98,10 @@ object-fit: cover;
 object-position: 50% 50%;
 margin: 5px;
 }
+.Home{
+    color: rgba(255, 255, 255, 0.5)
 
+}
 .Home .tf-items .item2,.Home .tf-items .item4{
     margin: 50px 30px 0 30px;
 }
