--- a/Front-End/lammah/src/style/manage-brand.css
+++ b/Front-End/lammah/src/style/manage-brand.css
@@ -1,52 +1,213 @@
-.ManageBrand{
-    width: 65%;
-    margin: 80px auto 0 auto;
-   
-
+.ManageBrand {
+  width: 85%;
+  margin: 80px auto 0 auto;
+}
+.ManageBrand h1 {
+  font-size: 1.2em;
+}
+.ManageBrand p {
+  font-size: 0.9rem;
+  max-width: 95%;
 }
 
-.ManageBrand h3{
-    color: rgb(221, 24, 73);
-    font-weight: bold;
+.ManageBrand .main-lists {
+  margin-top: 5%;
+}
+.ManageBrand .main-lists {
+}
+.ManageBrand .main-lists .fc-bar {
+  border-bottom: 1px solid gray;
+  display: flex;
+  align-items: center;
+  background-color: #282c36;
+  color: white;
+  border-radius: 5px;
+}
+.ManageBrand .main-lists .fc-nav-num {
+  margin: 1%;
+  background-color: red;
+  width: 30px;
+  border-radius: 3px;
+  text-align: center;
+}
+.ManageBrand .main-lists .fc-name {
+  margin: 1%;
+}
+.ManageBrand .main-lists .fc-table {
+  width: 100%;
+  border: 1px solid #282c36;
+  border-collapse: collapse;
+  font-size: 1rem;
+}
+.ManageBrand .main-lists .fc-table .fc-titles {
+  text-align: center;
+  background-color: #282c36;
+  border: 1px solid #282c36;
+  color: white;
+}
+.ManageBrand .main-lists .fc-table .fc-titles th {
+  border: 1px solid #282c36;
+}
+.ManageBrand .main-lists .fc-table .tr {
+  text-align: center;
+}
+.ManageBrand .main-lists .fc-table td {
+  border: 1px solid #282c36;
+  padding-left: 10px;
+}
+.ManageBrand .main-lists .fc-table .btn-confirm-req {
+  border: 1px solid #282c36;
+  padding-left: 10px;
+  background-color: rgb(66, 235, 51);
+  cursor: pointer;
+}
+.ManageBrand .main-lists .fc-table .btn-delete-req {
+  border: 1px solid #282c36;
+  padding-left: 10px;
+  background-color: red;
+  cursor: pointer;
 }
 
-.ManageBrand .card-container{
-    margin-bottom: 20px;
+.ManageBrand .tap {
+}
+.ManageBrand .your-facilities {
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ManageBrand .your-facilities .fc-card {
+  display: flex;
+  border: 1px solid gray;
+  flex-wrap: nowrap;
+  max-width: 800px;
+  margin: 0 0 15px 0;
+  object-position: 10% 50%;
+  justify-content: flex-end;
+  min-width: 800px;
+  flex-wrap: wrap;
+}
+.ManageBrand .your-facilities .fc-card .fc-layer {
+  position: relative;
+  max-width: 80%;
+  min-width: 80%;
+}
+.ManageBrand .your-facilities .fc-card .content {
+  background-color: rgba(40, 44, 54, 0.9);
+  color: white;
+  padding: 3%;
+}
+.ManageBrand .your-facilities .fc-card .btn-edit-fc {
+  position: absolute;
+  right: 0;
+  bottom: 5%;
+  max-width: 150px;
+  min-width: 100px;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  color: red;
+  text-align: center;
+  cursor: pointer;
+}
+.ManageBrand .your-facilities .fc-card .btn-delete-fc {
+  position: absolute;
+  right: 1%;
+  top: 2%;
+  color: red;
+  cursor: pointer;
+  border: 1px solid gray;
+  padding: 0 10px 0 10px;
+}
+.ManageBrand .confirmed-res {
+  margin-top: 5%;
+  width: 100%;
+}
+.ManageBrand .confirmed-res table {
+  width: 100%;
+  border: 1px solid #282c36;
+  border-collapse: collapse;
+  width: 100%;
+  font-size: 0.9rem;
+}
+.ManageBrand .confirmed-res .tb-title {
+  text-align: center;
+  background-color: #282c36;
+  border: 1px solid #282c36;
+  color: white;
+  width: 100%;
+}
+.ManageBrand .confirmed-res .tb-title th {
+  border: 1px solid #282c36;
+}
+.ManageBrand .confirmed-res .tb-row {
+  text-align: center;
+}
+.ManageBrand .confirmed-res .tb-row td{
+  border: 1px solid black;
+  padding-left: 10px;
 }
 
-.ManageBrand .card-body{
-    display: flex;
+@media (max-width: 900px) {
+  .ManageBrand .main-lists .fc-table {
+    font-size: 0.4rem;
+  }
+  .ManageBrand .your-facilities .fc-card {
+    min-width: 40vh;
+  }
+  .ManageBrand .your-facilities .fc-card .fc-layer {
+    max-width: 100%;
+    min-width: 100%;
+  }
+  .ManageBrand .confirmed-res table {
+    font-size: 0.5rem;
+  }
 }
 
-.ManageBrand .card-body img{
-    display: flex;
-    width: 200px;
-    flex: 10%;
-    margin-right: 50px;
+.ManageBrand h3 {
+  color: rgb(221, 24, 73);
+  font-weight: bold;
 }
 
-.ManageBrand .card-content{
-    display: flex;
-    flex-direction: column;
-    flex: 50%;
+.ManageBrand .card-container {
+  margin-bottom: 20px;
 }
 
-.ManageBrand .card-container .card-btns{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 10%;
+.ManageBrand .card-body {
+  display: flex;
 }
 
-.ManageBrand .card-container button{
-    width: 100px;
-    margin-top: 20px;
-    display: flex;
+.ManageBrand .card-body img {
+  display: flex;
+  width: 200px;
+  flex: 10%;
+  margin-right: 50px;
+}
+
+.ManageBrand .card-content {
+  display: flex;
+  flex-direction: column;
+  flex: 50%;
+}
+
+.ManageBrand .card-container .card-btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 10%;
+}
+
+.ManageBrand .card-container button {
+  width: 100px;
+  margin-top: 20px;
+  display: flex;
 }
 
 /* Responsive layout - makes a one column layout instead of a three-column layout */
 @media (max-width: 2000px) {
-    .card-body img, .card-content, .card-btns {
-      flex: 100%;
-    }
+  .card-body img,
+  .card-content,
+  .card-btns {
+    flex: 100%;
   }
+}
