--- a/Front-End/lammah/src/css/nav-bar.css
+++ b/Front-End/lammah/src/css/nav-bar.css
@@ -5,49 +5,61 @@
   width: 100%;
   text-align: center;
   font-weight: bold;
-  
 }
 
 .NavBar .frist-row {
   display: flex;
   width: 100%;
   background-color: #1b1d22;
+  justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   /* flex-wrap: wrap; */
-  height: 40px;
+  min-height: 40px;
+}
+.NavBar .frist-row .search {
+  height: 20px;
+  width: 15%;
 }
 
- /* @media only screen and (max-width: 1400px) {
-    .NavBar .frist-row{
-        font-size: 1.3em;
-    }
+@media only screen and (max-width: 1400px) {
+  .NavBar .frist-row {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .NavBar .frist-row .menu-element {
+    font-size: 1rem;
+    padding: 3% 0 3% 0;
+    /* display: none; */
+  }
+  .NavBar .frist-row .logo {
+    margin: 5% 10% 0 5%;
+  }
+  .NavBar .frist-row .search {
+    margin-top: 5%;
+    width: 70%;
+    max-height: 30px;
+  }
 
-    /* body{
-        font-size: 0.7em;
-    }
-    h1{
-        font-size: 2em;
-    }  
-} */
-
-
+}
 
 .NavBar .frist-row .menu-element {
-  margin: 20px;
   min-width: 200px;
   text-decoration: none;
   color: #ffffff;
-  font-size: 0.8em;
+  font-size: 0.8rem;
+}
+.NavBar .frist-row .menu-element:hover {
+  color: #b6b6b6;
 }
 
 .NavBar .frist-row .logo {
-  margin: 0 10% 0 5%;
-  background-image: url('../imges/lammah-logo-eng.png');
+  margin: 0% 10% 0 5%;
+  background-image: url("../imges/lammah-logo-eng.png");
   width: 160px;
   height: 50px;
   background-position: center;
   background-repeat: no-repeat;
-  
 }
 
 .NavBar .sec-row {
@@ -55,13 +67,18 @@
   width: 100%;
   justify-content: space-around;
   background-color: #2a2f35;
-  max-height: 5vh;
+  max-height: 2vh;
+  min-height: 2vh;
+  align-items: center;
 }
 
 .NavBar .sec-row .menu-element {
-    color: #ffffff;
-    font-size: 0.7em;
-
+  color: #ffffff;
+  font-size: 0.7rem;
+}
+.NavBar .sec-row .menu-element:hover {
+  color: #b6b6b6;
+  text-decoration: none;
 }
 /* 
 @media only screen and (max-width: 500px) {
