--- a/Front-End/lammah/src/style/OneFacility.css
+++ b/Front-End/lammah/src/style/OneFacility.css
@@ -1,6 +1,6 @@
 
 .OneFacility{
-    width: 65%;
+    width: 85%;
     margin: 0 auto ;
 }
 
@@ -13,11 +13,12 @@
 } 
 
 .OneFacility .mainIMG{
-    width: 350px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     margin-left: 0;
     object-fit: cover;
     object-position: 50% 50%;
+
 }
 
 .OneFacility button{
@@ -29,11 +30,26 @@
     border-radius: 10%;
 
 }
-
-
-
-@media only screen and (max-width: 500px) {
-    .OneFacility .mainIMG{
-        max-width: 250px;
+.OneFacility .main-img-container{
+    margin: 0% auto 5% auto;
+}
+@media only screen and (max-width: 1300px) {
+        .OneFacility .main-img-container{
+        margin: 5% auto 10% auto;
     }
+}
+
+@media only screen and (max-width: 800px) {
+    .OneFacility .mainIMG{
+        max-width: 60%;
+
+    }
+    .OneFacility .smallIMG{
+        width: 50px;
+        border: 2px solid rgba(128, 128, 128, 0.37);
+        margin: 1%;
+        padding: 2px;
+        
+    } 
+
 } 
