--- a/Front-End/lammah/src/css/home.css
+++ b/Front-End/lammah/src/css/home.css
@@ -1,7 +1,9 @@
 /* Apply Style For The whole App*/
+@import url('https://fonts.googleapis.com/css2?family=Changa:wght@200&display=swap');
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    position: relative;
 }
 /* ========================= */
 
@@ -30,6 +32,10 @@ body {
   justify-content: center;
   align-items: center;
 }
+.Home .header h1 {
+  font-size: 1.5rem;
+  max-width: 50%;
+}
 
 /* Hart of the header "Description" */
 .Home .container {
@@ -44,8 +50,7 @@ body {
 .Home .section{
     
     margin-top: 3%;
-    width: 85%;
-    height: 1000px;
+    width: 65%;
     display:flex;
     flex-direction: column;
 }
@@ -91,7 +96,7 @@ body {
   margin: 5px;
 }
 .Home {
-  color: rgba(255, 255, 255, 0.5);
+
 }
 .Home .tf-items .item2,
 .Home .tf-items .item4 {
@@ -223,6 +228,10 @@ body {
     font-weight: bold;
     font-size: 0.5em;
   }
+  .Home .header h1{
+    font-size: 0.8rem;
+  }
+  
 }
 .Home .facility-card .card-img {
   height: 100%;
