--- a/Front-End/lammah/src/style/OneFacility.css
+++ b/Front-End/lammah/src/style/OneFacility.css
@@ -9,12 +9,17 @@
     border: 2px solid rgba(128, 128, 128, 0.37);
     margin: 1%;
     padding: 2px;
+    height: 60px;
+    object-fit: cover;
+    object-position: 50% 50%;
+
     
 } 
 
 .OneFacility .mainIMG{
     width: 100%;
-    height: 100%;
+    height: 300px;
+    max-width: 500px;
     margin-left: 0;
     object-fit: cover;
     object-position: 50% 50%;
@@ -41,11 +46,13 @@
 
 @media only screen and (max-width: 800px) {
     .OneFacility .mainIMG{
-        max-width: 60%;
+        width: 60%;
+        height: 200px;
 
     }
     .OneFacility .smallIMG{
         width: 50px;
+        height: 40px;
         border: 2px solid rgba(128, 128, 128, 0.37);
         margin: 1%;
         padding: 2px;
